<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.SimpleDaysCounter.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:theme="@style/Theme.SimpleDaysCounter.AppWidgetContainer">

        <LinearLayout
            android:id="@+id/llTimeCounting"
            style="@style/Widget.SimpleDaysCounter.AppWidget.InnerView"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

        <TextView
            android:id="@+id/tvWdgCountingNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:contentDescription="@string/app_widget_counting_description"
            android:text="@string/app_widget_counting_number"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWdgCountingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:text="@string/app_widget_counting_text_days"
            android:contentDescription="@string/app_widget_counting_description"
            android:textSize="12sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvWdgEventName"
            style="@style/Widget.SimpleDaysCounter.AppWidget.InnerView"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:contentDescription="@string/app_widget_event_name_description"
            android:text="@string/app_widget_event_name"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="24sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

</LinearLayout>